[package]
name = "kp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3.2.1", features = ["wayland-data-control"] }
clap = { version = "4.4.6", features = ["derive"] }
keepass = "0.6.1"
rpassword = "7.2.0"
